--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
+    "react-resizable-panels": "^2.1.7",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.10"
   },
